# nodepad

./: .gitignore  .nojekyll  .python-version  README.md  README.qmd  about.html  example.html  example.qmd  index.html  pref.py  pyproject.toml  search.json
.github/workflows/: ci-cd.yml  docs.yml  tests.yml
docs/: _quarto.yml  example.qmd  generate.py  index.qmd  objects.json
nodepad/: __init__.py  blender_manifest.toml  documenter.py  generate_docs.py  interface.py
noodlenotes/: __init__.py  blender_manifest.toml  panel.py  pref.py
reference/: Documenter.as_markdown.html  Documenter.html  documenter.Documenter.html  index.html
site_libs/bootstrap/: bootstrap-2d4908c30ef9ecd27c55553de21464c5.min.css  bootstrap-b512ed6338af860ca47fb5ff00f6cd71.min.css
tests/: node_info.json  test_documenter.py
tests/__snapshots__/: test_documenter.ambr
